tests/NormalTests/paczka1/small_fuzzy/19888181.err
Error in line 2: lSlzt A599 98,0
Error in line 3: lSlzt A123 69,0
Error in line 1: eF7sxtle A123 60,0
Error in line 12: I177 A599 74,2
